--- a/src/main/webapp/app/entities/redirection/redirection-detail.component.html
+++ b/src/main/webapp/app/entities/redirection/redirection-detail.component.html
@@ -36,6 +36,10 @@
                 <dd>
                     <span>{{ redirection.endDate }}</span>
                 </dd>
+                <dt><span jhiTranslate="fluidQrServerApp.redirection.user">User</span></dt>
+                <dd>
+                    {{ redirection.user?.id }}
+                </dd>
                 <dt><span jhiTranslate="fluidQrServerApp.redirection.qrCode">Qr Code</span></dt>
                 <dd>
                     <div *ngIf="redirection.qrCode">
