--- a/src/main/webapp/app/entities/redirection/redirection-update.component.html
+++ b/src/main/webapp/app/entities/redirection/redirection-update.component.html
@@ -69,6 +69,14 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="fluidQrServerApp.redirection.user" for="field_user">User</label>
+                    <select class="form-control" id="field_user" name="user" formControlName="user">
+                        <option [ngValue]="null"></option>
+                        <option [ngValue]="userOption.id === editForm.get('user')!.value?.id ? editForm.get('user')!.value : userOption" *ngFor="let userOption of users; trackBy: trackById">{{ userOption.id }}</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="fluidQrServerApp.redirection.qrCode" for="field_qrCode">Qr Code</label>
                     <select class="form-control" id="field_qrCode" name="qrCode" formControlName="qrCode">
                         <option [ngValue]="null"></option>
