--- a/src/main/webapp/app/qr-code-display/qr-code-display.component.html
+++ b/src/main/webapp/app/qr-code-display/qr-code-display.component.html
@@ -1,15 +1,20 @@
 
 <div class="row">
 
-    <div class="col-2">
+    <div class="col-3">
+        <h3 class="text-capitalize text-left">
+            <span>{{ currentQrCode?.code }}</span>
+            <button class="btn btn-primary" jhiTranslate="qr-codes.delete">Delete</button>
+        </h3>
+
             <div class="mb-2">
                 <span jhiTranslate="qr-codes.publicUrl">Public URL</span>: <br>
-                <a target="_blank" [href]="redirectUrl">{{ redirectUrl }}</a>
+                <a target="_blank" [href]="currentQrCode?.link">{{ currentQrCode?.link }}</a>
             </div>
 
             <div class="mb-2">
                 <span jhiTranslate="qr-codes.currentRedirection">Current Redirection</span>: <br>
-                <a target="_blank" [href]="currentRedirection">{{ currentRedirection }}</a>
+                <a target="_blank" [href]="currentQrCode?.currentRedirect">{{ currentQrCode?.currentRedirect }}</a>
             </div>
 
             <div class="mt-3">
@@ -26,7 +31,7 @@
     </div>
 
     <div class="col-4">
-        <div id="canvas"></div>
+        <div [id]="'canvas-' + this.currentQrCode?.id"></div>
         <a [href]="qrCodeImage" class="btn btn-primary mt-3 text-white" (click)="onDownload()" download="bildwerkqr" jhiTranslate="qr-codes.download">Download</a>
     </div>
 
