[work/qr-codes-display] add qr code modal

--- a/src/main/webapp/app/qr-codes/qr-codes.component.html
+++ b/src/main/webapp/app/qr-codes/qr-codes.component.html
@@ -4,7 +4,7 @@
 
         <h1 class="text-capitalize text-left">
             <span jhiTranslate="qr-codes.title">Title</span>
-            <button class="btn btn-primary" jhiTranslate="qr-codes.add">Add</button>
+            <button class="btn btn-primary" jhiTranslate="qr-codes.add" (click)="openAdd()">Add</button>
         </h1>
 
         <div class="col-md-4">
