--- a/src/main/webapp/app/qr-codes/qr-codes.component.html
+++ b/src/main/webapp/app/qr-codes/qr-codes.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="m-2 align-content-center">
             <ng-container *ngFor="let qrCode of qrCodes">
-                <jhi-qr-code-display class="mb-2" [currentQrCode]="qrCode"></jhi-qr-code-display>
+                <jhi-qr-code-display class="mb-2" [currentQrCode]="qrCode" (deleteQrCode)="deleteQrCode($event)"></jhi-qr-code-display>
             </ng-container>
         </div>
 
