[work/qr-codes-display] qr code download

--- a/src/main/webapp/app/qr-code-display/qr-code-display.component.html
+++ b/src/main/webapp/app/qr-code-display/qr-code-display.component.html
@@ -32,7 +32,7 @@
 
     <div class="col-4">
         <div [id]="'canvas-' + this.currentQrCode?.id"></div>
-        <a [href]="qrCodeImage" class="btn btn-primary mt-3 text-white" (click)="onDownload()" download="bildwerkqr" jhiTranslate="qr-codes.download">Download</a>
+        <a class="btn btn-primary mt-3 text-white" (click)="onDownload()" jhiTranslate="qr-codes.download">Download</a>
     </div>
 
 </div>
