--- a/src/main/webapp/app/qr-codes/qr-codes.component.html
+++ b/src/main/webapp/app/qr-codes/qr-codes.component.html
@@ -1,20 +1,19 @@
-<div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-10">
+<div>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
 
-        <h1 class="text-capitalize text-left">
-            <span jhiTranslate="qr-codes.title">Title</span>
-            <button class="btn btn-primary" jhiTranslate="qr-codes.add" (click)="openAdd()">Add</button>
-        </h1>
+            <h1 class="text-capitalize text-left">
+                <span jhiTranslate="qr-codes.title">Title</span>
+                <button class="btn btn-primary float-right" jhiTranslate="qr-codes.add" (click)="openAdd()">Add</button>
+            </h1>
 
-        <div class="col-md-4">
+            <div>
+                <div class="mb-5" *ngFor="let qrCode of qrCodes">
+                    <jhi-qr-code-display class="mt-4" [currentQrCode]="qrCode"
+                                         (deleteQrCode)="deleteQrCode($event)"></jhi-qr-code-display>
+                </div>
+            </div>
         </div>
-        <div class="m-2 align-content-center">
-            <ng-container *ngFor="let qrCode of qrCodes">
-                <jhi-qr-code-display class="mb-2" [currentQrCode]="qrCode" (deleteQrCode)="deleteQrCode($event)"></jhi-qr-code-display>
-            </ng-container>
-        </div>
-
+        <div class="col-md-1"></div>
     </div>
-    <div class="col-md-1"></div>
 </div>
