[work/redirection-update] delete modal

--- a/src/main/webapp/app/qr-codes/qr-codes.component.html
+++ b/src/main/webapp/app/qr-codes/qr-codes.component.html
@@ -10,7 +10,7 @@
             <div>
                 <div class="mb-4" *ngFor="let qrCode of qrCodes">
                     <jhi-qr-code-display [currentQrCode]="qrCode"
-                                         (deleteQrCode)="deleteQrCode($event)"></jhi-qr-code-display>
+                                         (deleteQrCode)="deleteQrCode()"></jhi-qr-code-display>
                 </div>
             </div>
         </div>
