--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <a href="https://www.bildwerk-medien.de/">&copy; [bild:werk] Medien 2021</a>
+    <a href="https://www.bildwerk-medien.de/">&copy; [bild:werk] medien 2021</a>
 </div>
