--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -15,7 +15,7 @@
         </span>
     </div>
 
-    <div class="mt-2">
+    <div class="mt-2 mb-2">
         <a href="https://www.bildwerk-medien.de/">&copy; [bild:werk] medien 2021</a>
     </div>
 
