--- a/src/main/webapp/app/qr-codes/delete/delete-modal.component.html
+++ b/src/main/webapp/app/qr-codes/delete/delete-modal.component.html
@@ -9,8 +9,8 @@
 <div class="modal-body">
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <div class="alert alert-danger" *ngIf="creationError" jhiTranslate="login.messages.error.authentication">
-                <strong>Failed to sign in!</strong> Please check your credentials and try again.
+            <div class="alert alert-danger" *ngIf="creationError" jhiTranslate="qr-codes.error.deleteQrCode">
+                <strong>Failed to delete QR code</strong> Please try again.
             </div>
         </div>
 
