--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -5,7 +5,7 @@
         <h5 jhiTranslate="footer.donationText">
             This platform lives on your support!
         </h5>
-        <a href="https://www.bildwerk-medien.de/140-2/" target="_blank" class="btn btn-lg btn-primary" jhiTranslate="footer.donateNow">Donate Now</a>
+        <a href="https://www.missionarisch-unterwegs.de/spenden/" target="_blank" class="btn btn-lg btn-primary" jhiTranslate="footer.donateNow">Donate Now</a>
     </div>
 
     <div class="mt-4">
