--- a/src/main/webapp/app/qr-codes/qr-codes.component.html
+++ b/src/main/webapp/app/qr-codes/qr-codes.component.html
@@ -1,19 +1,17 @@
 <div>
-    <div class="row justify-content-center">
-        <div class="col-md-6">
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-xl-6 ml-3 mr-3 col-12">
+      <h1 class="text-capitalize text-left mb-4">
+        <span jhiTranslate="qr-codes.title">Title</span>
+        <button class="btn btn-primary float-right mt-2 mt-md-0" jhiTranslate="qr-codes.add" (click)="openAdd()">Add</button>
+      </h1>
 
-            <h1 class="text-capitalize text-left mb-4">
-                <span jhiTranslate="qr-codes.title">Title</span>
-                <button class="btn btn-primary float-right" jhiTranslate="qr-codes.add" (click)="openAdd()">Add</button>
-            </h1>
-
-            <div>
-                <div class="mb-4" *ngFor="let qrCode of qrCodes">
-                    <jhi-qr-code-display [currentQrCode]="qrCode"
-                                         (deleteQrCode)="deleteQrCode()"></jhi-qr-code-display>
-                </div>
-            </div>
+      <div>
+        <div class="mb-4" *ngFor="let qrCode of qrCodes">
+          <jhi-qr-code-display [currentQrCode]="qrCode" (deleteQrCode)="deleteQrCode()"></jhi-qr-code-display>
         </div>
-        <div class="col-md-1"></div>
+      </div>
     </div>
+    <div class="col-md-1"></div>
+  </div>
 </div>
