--- a/src/main/webapp/app/qr-codes/show/show-modal.component.html
+++ b/src/main/webapp/app/qr-codes/show/show-modal.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="modal-body">
-  <div class="row justify-content-center">
+  <div class="d-flex justify-content-center">
     <div class="float-end" [id]="this.qrCodeCanvasId"></div>
   </div>
 </div>
