[protractor] center qr code modal

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-          <a class="nav-link" routerLink="qr-codes" (click)="collapseNavbar()">
+          <a class="nav-link" routerLink="qr-codes" id="qr-codes-nav-element" (click)="collapseNavbar()">
             <fa-icon icon="qrcode" [fixedWidth]="true"></fa-icon>
             <span jhiTranslate="global.menu.qr-codes">Qr Codes</span>
           </a>
