--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -14,6 +14,14 @@ h4 {
   font-weight: 300;
 }
 
+.btn-primary {
+  color: white;
+}
+
+.btn-primary:hover {
+  color: white;
+}
+
 /* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
 a {
   color: #533f03;
